<resources>
    <string name="app_name">Weather</string>
    <string name="temperature">32°C</string>
    <string name="place">Saint-Petersburg</string>
    <string name="weather">Sunny</string>
    <string name="value_of_speed_wind">74</string>
    <string name="value_of_precipitation">40</string>
    <string name="value_of_humidity">80</string>
    <string name="speed_of_wind">Wind flow</string>
    <string name="precipitation">Precipitation</string>
    <string name="humidity">Humidity</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="friday">Friday</string>
    <string name="windy">Windy</string>
    <string name="rainy">Rainy</string>
    <string name="cloudy">Cloudy</string>
    <string name="foggy">Foggy</string>
    <string name="frosty">Frosty</string>
    <string name="theme">D</string>
</resources>