<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="216dp"
        android:layout_height="216dp"
        android:layout_marginTop="16dp"
        android:background="@color/back"
        android:src="@drawable/sun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/simple_information"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="temperature, place, weather" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/back"
        android:gravity="center"
        android:text="@string/temperature"
        android:textColor="@color/gray"
        android:textSize="44sp"
        app:layout_constraintEnd_toEndOf="@+id/image"
        app:layout_constraintStart_toStartOf="@+id/image"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <TextView
        android:id="@+id/place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/back"
        android:gravity="center"
        android:text="@string/place"
        android:textColor="@color/gray"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/temperature"
        app:layout_constraintStart_toStartOf="@+id/temperature"
        app:layout_constraintTop_toBottomOf="@+id/temperature" />

    <TextView
        android:id="@+id/weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/back"
        android:text="@string/weather"
        android:textColor="@color/gray"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/place"
        app:layout_constraintStart_toStartOf="@+id/place"
        app:layout_constraintTop_toBottomOf="@+id/place" />

    <TextView
        android:id="@+id/value_of_speed_of_wind"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/circle_left_top"
        android:gravity="center"
        android:padding="8dp"
        android:radius="100dp"
        android:text="@string/value_of_speed_wind"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/wind_image"
        app:layout_constraintEnd_toStartOf="@id/value_of_precipitation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weather" />

    <TextView
        android:id="@+id/value_of_precipitation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="1dp"
        android:background="@color/white"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/value_of_precipitation"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/precipitation_image"
        app:layout_constraintEnd_toStartOf="@id/value_of_humidity"
        app:layout_constraintStart_toEndOf="@id/value_of_speed_of_wind"
        app:layout_constraintTop_toBottomOf="@id/weather" />

    <TextView
        android:id="@+id/value_of_humidity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/circle_right_top"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/value_of_humidity"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/humidity_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/value_of_precipitation"
        app:layout_constraintTop_toBottomOf="@id/weather" />

    <ImageView
        android:id="@+id/wind_image"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="1dp"
        android:background="@color/white"
        android:src="@drawable/wind"
        app:layout_constraintBottom_toTopOf="@id/speed_of_wind"
        app:layout_constraintEnd_toStartOf="@id/precipitation_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/value_of_speed_of_wind" />

    <ImageView
        android:id="@+id/precipitation_image"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="@color/white"
        android:src="@drawable/line"
        app:layout_constraintBottom_toTopOf="@id/precipitation"
        app:layout_constraintEnd_toStartOf="@id/humidity_image"
        app:layout_constraintStart_toEndOf="@id/wind_image"
        app:layout_constraintTop_toBottomOf="@id/value_of_precipitation" />

    <ImageView
        android:id="@+id/humidity_image"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:src="@drawable/rain"
        app:layout_constraintBottom_toTopOf="@id/humidity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/precipitation_image"
        app:layout_constraintTop_toBottomOf="@id/value_of_humidity" />

    <TextView
        android:id="@+id/speed_of_wind"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/circle_left_bottom"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/speed_of_wind"
        android:textColor="@color/gray"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/precipitation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wind_image" />

    <TextView
        android:id="@+id/precipitation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="@color/white"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/precipitation"
        android:textColor="@color/gray"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/humidity"
        app:layout_constraintStart_toEndOf="@id/speed_of_wind"
        app:layout_constraintTop_toBottomOf="@id/precipitation_image" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/circle_right_top_bottom"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/humidity"
        android:textColor="@color/gray"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/precipitation"
        app:layout_constraintTop_toBottomOf="@id/humidity_image" />

    <TextView
        android:id="@+id/first_day_weather"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/circle_left_top"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/windy"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/first_day_weather_image"
        app:layout_constraintEnd_toStartOf="@id/second_day_weather"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/second_day_weather"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@color/white"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/rainy"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/second_day_weather_image"
        app:layout_constraintEnd_toStartOf="@id/third_day_weather"
        app:layout_constraintStart_toEndOf="@id/first_day_weather" />

    <TextView
        android:id="@+id/third_day_weather"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@color/white"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/cloudy"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/third_day_weather_image"
        app:layout_constraintEnd_toStartOf="@id/fourth_day_weather"
        app:layout_constraintStart_toEndOf="@id/second_day_weather" />

    <TextView
        android:id="@+id/fourth_day_weather"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@color/white"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/foggy"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/fourth_day_weather_image"
        app:layout_constraintEnd_toStartOf="@id/fifth_day_weather"
        app:layout_constraintStart_toEndOf="@id/third_day_weather" />

    <TextView
        android:id="@+id/fifth_day_weather"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/circle_right_top"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/frosty"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/fifth_day_weather_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fourth_day_weather" />

    <ImageView
        android:id="@+id/first_day_weather_image"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:background="@color/white"
        android:src="@drawable/wind"
        app:layout_constraintBottom_toTopOf="@id/first_day"
        app:layout_constraintEnd_toStartOf="@id/second_day_weather_image"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/second_day_weather_image"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/white"
        android:src="@drawable/rain"
        app:layout_constraintBottom_toTopOf="@id/second_day"
        app:layout_constraintEnd_toStartOf="@id/third_day_weather_image"
        app:layout_constraintStart_toEndOf="@id/first_day_weather_image" />

    <ImageView
        android:id="@+id/third_day_weather_image"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/white"
        android:padding="7dp"
        android:src="@drawable/cloudy"
        app:layout_constraintBottom_toTopOf="@id/third_day"
        app:layout_constraintEnd_toStartOf="@id/fourth_day_weather_image"
        app:layout_constraintStart_toEndOf="@id/second_day_weather_image" />

    <ImageView
        android:id="@+id/fourth_day_weather_image"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/white"
        android:padding="3dp"
        android:src="@drawable/foggy"
        app:layout_constraintBottom_toTopOf="@id/fourth_day"
        app:layout_constraintEnd_toStartOf="@id/fifth_day_weather_image"
        app:layout_constraintStart_toEndOf="@id/third_day_weather_image" />

    <ImageView
        android:id="@+id/fifth_day_weather_image"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:padding="3dp"
        android:src="@drawable/frosty"
        app:layout_constraintBottom_toTopOf="@id/fifth_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fourth_day_weather_image" />

    <TextView
        android:id="@+id/first_day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/circle_left_bottom"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/monday"
        android:textColor="@color/gray"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/second_day"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/second_day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/tuesday"
        android:textColor="@color/gray"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/third_day"
        app:layout_constraintStart_toEndOf="@id/first_day" />

    <TextView
        android:id="@+id/third_day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/wednesday"
        android:textColor="@color/gray"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fourth_day"
        app:layout_constraintStart_toEndOf="@id/second_day" />

    <TextView
        android:id="@+id/fourth_day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/thursday"
        android:textColor="@color/gray"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fifth_day"
        app:layout_constraintStart_toEndOf="@id/third_day" />

    <TextView
        android:id="@+id/fifth_day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/circle_right_top_bottom"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/friday"
        android:textColor="@color/gray"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fourth_day" />

</androidx.constraintlayout.widget.ConstraintLayout>

